force-app/main/default/objects/IntegrationSetting__mdt/IntegrationSetting__mdt.object-meta.xml
<CustomObject>
    <label>Integration Setting</label>
    <pluralLabel>Integration Settings</pluralLabel>
</CustomObject>