force-app/main/default/objects/IntegrationSetting__mdt/fields/ApexHandler__c.field-meta.xml
<CustomField>
    <fullName>ApexHandler__c</fullName>
    <label>Apex Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>