force-app/main/default/objects/IntegrationSetting__mdt/fields/AuthenticationType__c.field-meta.xml
<CustomField>
    <fullName>AuthenticationType__c</fullName>
    <label>Authentication Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oauth</fullName>
                <label>Custom OAuth</label>
            </value>
            <value>
                <fullName>NamedCredential</fullName>
                <label>Named Credential</label>
            </value>
            <value>
                <fullName>public</fullName>
                <label>Public</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>