force-app/main/default/objects/IntegrationSetting__mdt/fields/DebugCheck__c.field-meta.xml
<CustomField>
    <fullName>DebugCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug Check</label>
    <type>Checkbox</type>
</CustomField>