force-app/main/default/objects/IntegrationSetting__mdt/fields/Enforce_Limit__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Limit</label>
    <type>Checkbox</type>
</CustomField>