force-app/main/default/objects/IntegrationSetting__mdt/fields/EscapeCharacter__c.field-meta.xml
<CustomField>
    <fullName>EscapeCharacter__c</fullName>
    <label>Escape Character</label>
    <length>10</length>
    <type>Text</type>
</CustomField>