force-app/main/default/objects/IntegrationSetting__mdt/fields/Flat_Key_for_Resource__c.field-meta.xml
<CustomField>
    <fullName>Flat_Key_for_Resource__c</fullName>
    <label>Flat Key for Resource</label>
    <length>50</length>
    <type>Text</type>
</CustomField>