force-app/main/default/objects/IntegrationSetting__mdt/fields/Flat_Key_for_Resource_Child__c.field-meta.xml
<CustomField>
    <fullName>Flat_Key_for_Resource_Child__c</fullName>
    <inlineHelpText>Enter the flat key that identifies the resource for child records in the inbound JSON when root key of array is not the identifier</inlineHelpText>
    <label>Flat Key for Resource(Child)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>