force-app/main/default/objects/IntegrationSetting__mdt/fields/Flat_Key_for_Resource_Response__c.field-meta.xml
<CustomField>
    <fullName>Flat_Key_for_Resource_Response__c</fullName>
    <description>Flat Key in JSON to identify the resource. This is useful when Webhook notification JSON is different from immediate Response. E.g. Force Sync</description>
    <label>Flat Key for Resource(Response)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>