force-app/main/default/objects/IntegrationSetting__mdt/fields/Flat_Key_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Flat_Key_Pattern__c</fullName>
    <defaultValue>&quot;A.B&quot;</defaultValue>
    <label>Flat Key Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A.B</fullName>
                <default>true</default>
                <label>A.B</label>
            </value>
            <value>
                <fullName>A[B]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>