force-app/main/default/objects/IntegrationSetting__mdt/fields/Flat_Key_Separator__c.field-meta.xml
<CustomField>
    <fullName>Flat_Key_Separator__c</fullName>
    <defaultValue>&quot;.&quot;</defaultValue>
    <label>Flat Key Separator</label>
    <length>3</length>
    <type>Text</type>
</CustomField>