force-app/main/default/objects/IntegrationSetting__mdt/fields/Hashing_Algo__c.field-meta.xml
<CustomField>
    <fullName>Hashing_Algo__c</fullName>
    <label>Hashing Algo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MD5</fullName>
            </value>
            <value>
                <fullName>SHA1</fullName>
            </value>
            <value>
                <fullName>SHA3-256</fullName>
            </value>
            <value>
                <fullName>SHA3-384</fullName>
            </value>
            <value>
                <fullName>SHA3-512</fullName>
            </value>
            <value>
                <fullName>SHA-256</fullName>
            </value>
            <value>
                <fullName>SHA-512</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>