force-app/main/default/objects/IntegrationSetting__mdt/fields/Inbound_Custom_Apex_Handler__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Custom_Apex_Handler__c</fullName>
    <inlineHelpText>The custom apex handler for all inbound log handling including on-complete handler for inbound child records. Set SYS_ApplicationService if there is no override</inlineHelpText>
    <label>Inbound Custom Apex Handler</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>