force-app/main/default/objects/IntegrationSetting__mdt/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SYS_Auth_Integration_Setting</fullName>
                <default>true</default>
                <label>SYS_Auth_Integration_Setting</label>
            </value>
            <value>
                <fullName>SYS_OAuth_CC_IS</fullName>
            </value>
            <value>
                <fullName>SYS_OAuth_Integration_Setting</fullName>
            </value>
            <value>
                <fullName>SYS_OAuth_Pwd_IS</fullName>
            </value>
            <value>
                <fullName>SYS_Test_IntegrationSetting</fullName>
            </value>
            <value>
                <fullName>SYS_Test_IntegrationSetting_Fail</fullName>
            </value>
            <value>
                <fullName>SYS_Test_Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>