force-app/main/default/objects/IntegrationSetting__mdt/fields/License_Org_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>License_Org_Endpoint__c</fullName>
    <label>License Org Endpoint</label>
    <type>Url</type>
</CustomField>