force-app/main/default/objects/IntegrationSetting__mdt/fields/NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>NamedCredential__c</fullName>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>