force-app/main/default/objects/IntegrationSetting__mdt/fields/Notification_Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Notification_Wrapper__c</fullName>
    <label>Notification Wrapper</label>
    <length>100</length>
    <type>Text</type>
</CustomField>