force-app/main/default/objects/IntegrationSetting__mdt/fields/Notifications_are_partial__c.field-meta.xml
<CustomField>
    <fullName>Notifications_are_partial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notifications are partial</label>
    <type>Checkbox</type>
</CustomField>