force-app/main/default/objects/IntegrationSetting__mdt/fields/OAuth_Config_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Config_Record_Id__c</fullName>
    <label>OAuth Config Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>