force-app/main/default/objects/IntegrationSetting__mdt/fields/Operation_Map__c.field-meta.xml
<CustomField>
    <fullName>Operation_Map__c</fullName>
    <inlineHelpText>Enter HTTP Verb to Method map separated by new line. E.g. POST:INSERT</inlineHelpText>
    <label>Operation Map</label>
    <type>TextArea</type>
</CustomField>