force-app/main/default/objects/IntegrationSetting__mdt/fields/Parent_Resource_Map__c.field-meta.xml
<CustomField>
    <fullName>Parent_Resource_Map__c</fullName>
    <label>Parent Resource Map</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>