force-app/main/default/objects/IntegrationSetting__mdt/fields/Skip_Keys__c.field-meta.xml
<CustomField>
    <fullName>Skip_Keys__c</fullName>
    <inlineHelpText>Enter comma separated JSON keys that should be skipped while processing Inbound</inlineHelpText>
    <label>Skip Keys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>