force-app/main/default/objects/IntegrationSetting__mdt/fields/SYS_Test_IntegrationSetting__c.field-meta.xml
<CustomField>
    <fullName>SYS_Test_IntegrationSetting__c</fullName>
    <label>SYS Test IntegrationSetting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>