force-app/main/default/objects/IntegrationSetting__mdt/fields/UpdateMethod__c.field-meta.xml
<CustomField>
    <fullName>UpdateMethod__c</fullName>
    <defaultValue>&apos;POST&apos;</defaultValue>
    <label>Update Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POST</fullName>
                <default>true</default>
                <label>POST</label>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>