force-app/main/default/objects/IntegrationSetting__mdt/listViews/All_View.listView-meta.xml
<ListView>
    <fullName>All_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>EscapeCharacter__c</columns>
    <columns>ApexHandler__c</columns>
    <filterScope>Everything</filterScope>
    <label>All View</label>
</ListView>